Update buildscript
 - Added Quiltflower Mini decompiler
 - Added CI check for version suffixes
 - Removed unnecessary properties
 - Updated run configurations
 - Added -Xlint:-processing to compiler
 - Moved signing to dedicated tasks
 - Reformatted file